--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build -t docker:v1new -f /root/manoj/dockerfile .
+      run: docker build -t docker:v1new -f dockerfile .
