--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ on :
   
 jobs:
   build:
-    runs_on:
+    runs-on: ubuntu-latest
     steps:
-      - users: action/checkout@v2
+      - name: action/checkout@v2
       - name: Run echo
         run: echo hello world
       - name: Run shh
