--- a/.github/workflows/docker_oc.yml
+++ b/.github/workflows/docker_oc.yml
@@ -21,7 +21,7 @@ jobs:
         OC_USERNAME: ${{secrets.OC_USERNAME}}
         OC_PASSWORD: ${{secrets.OC_PASSWORD}}
       run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD default-route-openshift-image-registry.apps.ocp4.eidikointernal.com
     - name: Build the Docker image
       run: docker build -t firstimage:v1 --file dockerfilenew . 
     - name: oc login,using oc project,Docker tag and Docker push
