--- a/.github/workflows/docker_oc.yml
+++ b/.github/workflows/docker_oc.yml
@@ -27,5 +27,5 @@ jobs:
       run: |
         /usr/local/bin/ && ./oc login -u $OC_USERNAME -p $OC_PASSWORD --insecure-skip-tls-verify=true
         /usr/local/bin/ && ./oc project manojprod
-        docker tag firstimage:v1 default-route-openshift-image-registry.apps.ocp4.eidikointernal.com/dockerimage:v1
-        docker push default-route-openshift-image-registry.apps.ocp4.eidikointernal.com/dockerimage:v1
+        docker tag firstimage:v1 default-route-openshift-image-registry.apps.ocp4.eidikointernal.com/manojprod/dockerimage:v1
+        docker push default-route-openshift-image-registry.apps.ocp4.eidikointernal.com/manojprod/dockerimage:v1
