--- a/.github/workflows/docker_oc.yml
+++ b/.github/workflows/docker_oc.yml
@@ -29,4 +29,4 @@ jobs:
         /usr/local/bin/ && ./oc project manojprod
         docker tag firstimage:v1 default-route-openshift-image-registry.apps.ocp4.eidikointernal.com/manojprod/dockerimage:v1
         docker push default-route-openshift-image-registry.apps.ocp4.eidikointernal.com/manojprod/dockerimage:v1
-        ./devshift.sh
+        /home/bandaru/Downloads/devshift.sh
