--- a/.github/workflows/nexus.yml
+++ b/.github/workflows/nexus.yml
@@ -1,4 +1,4 @@
-name: Java with Nexus Repository
+name: Java and Nexus Repository Publisher
 
 on: [push]
 
@@ -6,17 +6,21 @@ jobs:
   build:
 
     runs-on: self-hosted
-
+    
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    with:
-   
-        serverUrl: http://localhost:8085/repository/devops_cicd/
+    - name: Nexus Repo Publish
+      uses: sonatype-nexus-community/nexus-repo-github-action@master
+      with:
+        serverUrl: http://192.168.2.40:8085/repository/devops_cicd/
         username: admin
-        password: ${{ secrets.$NEXUS_PASSWORD }} 
-        assets: extension=bar
-        filename: Devops_RakCICD-48.bar
+        password: ${{ secrets.NEXUS_PASSWORD }}
+        format: raw
+        repository: devops_cicd
+        coordinates: groupId=org.apache.maven artifactId=Application1
+        assets: extension=bar 
+        filename: /home/bandaru/Music/Application1.bar
