--- a/.github/workflows/nexus.yml
+++ b/.github/workflows/nexus.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Nexus Repo Publish
+    - name: Nexus repo Publish
       uses: sonatype-nexus-community/nexus-repo-github-action@master
       with:
         serverUrl: http://192.168.2.40:8085/repository/devops_cicd/
