--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -13,7 +13,8 @@ jobs:
       with:
         host: ${{ secrets.SONAR_HOST }}
         login: ${{ secrets.SONAR_TOKEN }}
-        projectBaseDir: "/root/Application1"
+        projectBaseDir: "$WORKSPACE"
         projectKey: "sonarqube"
         projectName: "sonarqube"
         projectVersion: "v0.0.1"
+
