--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -5,12 +5,14 @@ on: push
 jobs:
   sonarQubeTrigger:
     name: SonarQube Trigger
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@master
     - name: SonarQube Scan
       uses: kitabisa/sonarqube-action@master
       with:
+        host: ${{ secrets.SONAR_HOST }}
+        login: ${{ secrets.SONAR_TOKEN }}
         projectBaseDir: "/root/Application1"
         projectKey: "my-custom-project"
         projectName: "my-custom-project"
