--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -14,9 +14,9 @@ jobs:
         host: ${{ secrets.SONAR_HOST }}
         login: ${{ secrets.SONAR_TOKEN }}
         Dsonar.scm.provider: =git
-        projectBaseDir: "Application1"
-        sonar.projectKey: "Application1"
-        sonar.projectName: "Application1"
+        projectBaseDir: =Application1
+        sonar.projectKey: =Application1
+        sonar.projectName: =Application1
         
 
         
