--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -14,6 +14,11 @@ jobs:
         host: ${{ secrets.SONAR_HOST }}
         login: ${{ secrets.SONAR_TOKEN }}
         sonar.scm.provider: =git
+        sonar.projectKey: =Application1
+        sonar.projectName: =Application1
+        sonar.projectVersion: =1.0
+        sonar.sourceEncoding: =UTF-8
+        projectBaseDir: "/root/Aplication1"
        
         
 
