--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -3,24 +3,20 @@ name: sonarqube_scanning
 on: push
 
 jobs:
-  sonarQubeTrigger:
-    name: SonarQube Trigger
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@master
-    - name: SonarQube Scan
-      uses: kitabisa/sonarqube-action@v1.1.0
-      with:
-        host: ${{ secrets.SONAR_HOST }}
-        login: ${{ secrets.SONAR_TOKEN }}
-        
-uses: kitabisa/sonarqube-action@master
-with:
- sonar.scm.provider: =git
- sonar.projectKey: =Application1
- sonar.projectName: =Application1
- sonar.projectVersion: =1.0
- sonar.sourceEncoding: =UTF-8
+ SonarQubeTrigger:
+     name: SonarQube_Scanner
+     runs-on: self-hosted
+     steps:
+     - uses: actions/checkout@master
+     - name: SonarQube_Scan
+       uses: kitabisa/sonarqube-action@master
+       with:
+          host: ${{ secrets.SONARQUBE_HOST }}
+          login: ${{ secrets.SONARQUBE_TOKEN }}
+          projectBaseDir: "Application1"
+          projectKey: "New_Repo"
+          projectName: "New_Repo"
+          projectVersion: "v0.0.1"
   
        
         
