--- a/.github/workflows/GitHubYamlfile.yml
+++ b/.github/workflows/GitHubYamlfile.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build with Ant
         run: ant -noinput -buildfile build.xml
 
-   SonarQubeTrigger:
+  SonarQubeTrigger:
      name: SonarQube_Scanner
      runs-on: self-hosted
      steps:
@@ -37,21 +37,21 @@ jobs:
           projectName: "Devops_RakCICD"
           projectVersion: "v0.0.1"
           
-   BarFile Deploy in Openshift:
+  BarFile_Deploy_in_Openshift:
      runs-on: self-hosted
      steps:
-    - uses: actions/checkout@v2
-    - name: docker login
-      env:
+     - uses: actions/checkout@v2
+     - name: docker login
+       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         OC_USERNAME: ${{secrets.OC_USERNAME}}
         OC_PASSWORD: ${{secrets.OC_PASSWORD}}
-      run: |
+       run: |
         docker login -u $DOCKER_USER --password $(oc whoami -t) default-route-openshift-image-registry.apps.ocp4.eidikointernal.com
-    - name: Build the Docker image
-      run: docker build -t image:v1 --file dockerfilenew . 
-    - name: oc login,oc project,Docker tag & Docker push
-      run: |
+     - name: Build the Docker image
+       run: docker build -t image:v1 --file dockerfilenew . 
+     - name: oc login,oc project,Docker tag & Docker push
+       run: |
         /usr/local/bin/ && ./oc login -u $OC_USERNAME -p $OC_PASSWORD --insecure-skip-tls-verify=true
         /usr/local/bin/ && ./oc project manojprod
         docker tag image:v1 default-route-openshift-image-registry.apps.ocp4.eidikointernal.com/manojprod/devopsimage:v1
