--- a/.github/workflows/GitHubYamlfile.yml
+++ b/.github/workflows/GitHubYamlfile.yml
@@ -33,6 +33,7 @@ jobs:
        with:
           host: ${{ secrets.SONAR_HOST }}
           login: ${{ secrets.SONAR_TOKEN}}
+          projectBaseDir: "Application1"
           projectKey: "Devops_RakCICD"
           projectName: "Devops_RakCICD"
           projectVersion: "v0.0.1"
@@ -47,7 +48,7 @@ jobs:
         OC_USERNAME: ${{secrets.OC_USERNAME}}
         OC_PASSWORD: ${{secrets.OC_PASSWORD}}
        run: |
-        docker login -u $DOCKER_USER --password $(oc whoami -t) default-route-openshift-image-registry.apps.ocp4.eidikointernal.com
+        docker login -u $DOCKER_USER -p $(oc whoami -t) default-route-openshift-image-registry.apps.ocp4.eidikointernal.com
      - name: Build the Docker image
        run: docker build -t image:v1 --file dockerfilenew . 
      - name: oc login,oc project,Docker tag & Docker push
