--- a/.github/workflows/GitHubYamlfile.yml
+++ b/.github/workflows/GitHubYamlfile.yml
@@ -50,7 +50,7 @@ jobs:
        run: |
         docker login -u $DOCKER_USER -p $(oc whoami -t) default-route-openshift-image-registry.apps.ocp4.eidikointernal.com
      - name: Build the Docker image
-       run: docker build -t image:v1 --file dockerfilenew . 
+       run: docker build -t image:v1 --file dockerfilessl . 
      - name: oc login,oc project,Docker tag & push
        run: |
         /usr/local/bin/ && ./oc login -u $OC_USERNAME -p $OC_PASSWORD --insecure-skip-tls-verify=true
