--- a/odbc.ini
+++ b/odbc.ini
@@ -10,10 +10,10 @@ ORACLEDB=DataDirect ODBC Oracle Wire Protocol
 ;###########################################
 
 ;# Oracle stanza
-[ORADSN]
+[LOKESHSOURCE]
 Driver=/opt/ibm/ace-11/server/ODBC/drivers/lib/UKora95.so
 Description=DataDirect ODBC Oracle Wire Protocol
-HostName=192.168.1.116
+HostName=192.168.2.251
 PortNumber=1521
 ServiceName=xe
 CatalogOptions=0
