--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -20,10 +20,10 @@ jobs:
         OC_USERNAME: ${{secrets.OC_USERNAME}}
         OC_PASSWORD: ${{secrets.OC_PASSWORD}}
       run: |
-         docker login -u $DOCKER_USER -p $DOCKERUSER_PWD default-route-openshift-image-registry.apps.ocp4.6.eidikointernal.com
+         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD default-route-openshift-image-registry.apps.ocp4.6.eidikointernal.com
     - name: Build the Docker image
       run: docker build -t image:v1 --file dockerfiledb . 
-    - name: oc login,oc project,Docker tag & pushh
+    - name: oc login,oc project,Docker tag & push
       run: |
         /usr/local/bin/ && ./oc login -u $OC_USERNAME -p $OC_PASSWORD --insecure-skip-tls-verify=true
         /usr/local/bin/ && ./oc project manoj1
