--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -27,7 +27,7 @@ jobs:
       run: docker build -t image:v1 --file dockerfiledb . 
     - name: oc login,oc project,Docker tag & push
       run: |
-        /usr/local/bin/ && ./oc login -u $OC_USERNAME -p $OC_PASSWORD --insecure-skip-tls-verify=true
+        ./oc login -u $OC_USERNAME -p $OC_PASSWORD --insecure-skip-tls-verify=true
         /usr/local/bin/ && ./oc project manoj1
         docker tag image:v1 default-route-openshift-image-registry.apps.ocp4.6.eidikointernal.com/manoj1/devopsimage:v1
         docker push default-route-openshift-image-registry.apps.ocp4.6.eidikointernal.com/manoj1/devopsimage:v1
