--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -21,7 +21,7 @@ jobs:
         OC_PASSWORD: ${{secrets.OC_PASSWORD}}     
       run: |
         docker build -t image:v1 --file dockerfiledb .
-        ./oc login -u $OC_USERNAME -p $OC_PASSWORD --insecure-skip-tls-verify=true
+        /usr/local/bin/oc login -u $OC_USERNAME -p $OC_PASSWORD --insecure-skip-tls-verify=true
         docker login -u $DOCKER_USERNAME -p $(oc whoami -t) default-route-openshift-image-registry.apps.ocp4.6.eidikointernal.com
         /usr/local/bin/ && ./oc project manoj1
         docker tag image:v1 default-route-openshift-image-registry.apps.ocp4.6.eidikointernal.com/manoj1/devopsimage:v1
