--- a/.github/workflows/GitHubYamlfile.yml
+++ b/.github/workflows/GitHubYamlfile.yml
@@ -49,7 +49,7 @@ jobs:
         OC_PASSWORD: ${{secrets.OC_PASSWORD}}
        run: |
          docker login -u $DOCKER_USER -p $(oc whoami -t) default-route-openshift-image-registry.apps.ocp4.6.eidikointernal.com
-     - name: Build the Docker image
+     - name: Build the Docker image1
        run: docker build -t image:v1 --file dockerlog . 
      - name: oc login,oc project,Docker tag &push
        run: |
