--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,26 +1,33 @@
-name: sonarqube_scanning
+name: RakBank_CICD
 
-on: push
-
-jobs:
- SonarQubeTrigger:
-     name: SonarQube_Scanner
-     runs-on: self-hosted
-     steps:
-     - uses: actions/checkout@master
-     - name: SonarQube_Scan
-       uses: kitabisa/sonarqube-action@master
-       with:
-          host: ${{ secrets.SONAR_HOST }}
-          login: ${{ secrets.SONAR_TOKEN}}
-          projectBaseDir: "Application1"
-          projectKey: "Devops_RakCICD"
-          projectName: "Devops_RakCICD"
-          projectVersion: "v0.0.1"
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+    
   
-       
-        
+jobs:
+  build:
+    runs-on: self-hosted
 
-        
-       
-
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+ 
+      - name: docker login
+        env:
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          OC_USERNAME: ${{secrets.OC_USERNAME}}
+          OC_PASSWORD: ${{secrets.OC_PASSWORD}}
+          BARCREATION: /opt/ace-11.0.0.7/tools/mqsicreatebar
+          bar: /home/bandaru/Music/sampleproject/DB2APPS
+          
+        run: |
+            cd $bar && rm -rf *bar
+            $BARCREATION -data $GITHUB_WORKSPACE -b $bar/$GITHUB_JOB#$GITHUB_RUN_NUMBER.bar -a DBdataUsingHttp   
+    
